Changelog for GEMC
==================

7/7/16
 - Removed CPP obsolete materials: DCgas, FTinsfoam, Noryl, svtwirebond, MMGas, MMMesh, MMMylar, He4_1atm, He4_2atm, He4_3atm,
   He4_7atm, Mn, Cr, Ni, PbWO4, SemiMirror, He3_10amg, BariumOxide, StrontiumOxide, NH3_solid, NH3He, He4_liquid, BerylliumOxide,
   He3, He, Sr, Ox, Pb, Wf, N, Ba

7/6/16
 - Removed CPP obsolete materials: Air, Aerogel, Air_Opt2, NOMEX, RichAerogel3, RichAerogel5, Chlorine, Deuterium, Carbon, LHe,
   Densimet, Kapton, LgTF1, LeadOxide, LeadTungsten, Glass_GE180, As, W, AluminiumOxide, CalciumOxide, OptScint
 - changed color for help-html

7/5/2016
 - Additional optional string added to SPREAD_V:

   - "gauss": spread quantities with a gaussian distribution
   - "flat": default. spread quantities with a flat distribution.

   For example::

    - SPREAD_P="(1, 5)cm gauss"

  will spread the vertex with a gaussian distribution sigma of 1cm around r and 5 cm around z.

 - Vertex can be spread along "r" and "φ" or along the cartesian coordinate "x", "y", "z". To select, set SPREAD_V to:

   - ( number, number ) unit : selects (r, φ) spread
   - ( number, number, number ) unit : selects (dx, dy, dz) spread

 - These changes are backward compatible.

.. Note::
	6/19/16 gemc 2.4 released!

|


6/13/16
 - reinstated G4HadronPhysicsShielding
 - update help on physics list

6/9/16
 - fixed log for vertex units for LUND format

6/8/16
 - fixed mismatch between ftm hitprocess and actual geometry


6/3/16
 - if the particle is a geantino the edep will be its momentum (ftof only for now)

5/23/16
 - better comments for electronic noise routines
 - added option ELECTRONICNOISE to select sensitive detectors that will produce eletronic noise.
   The electronic noise is disabled by default

5/19/16
 - speeding up sensitive detector by not looking up vector<identifier>
 - added pure virtual function vector<MHit*> electronicNoise() to return a vector
   of hits coming from electronic noise.